# sheratan-core

./: .env.example  .gitignore  .release-please-config.json  .release-please-manifest.json  .spectral.js  .spectral.yaml  AGENT_PLAN.md  ARCHITECTURE.md  CHANGELOG.md  DASHBOARDS.md  GITHUB_PAGES_DEPLOYMENT.md  PERFORMANCE.md  README.md  README_PATCH.md  README_PATCH_APPEND.md  REQUIREMENTS_DEV_APPEND.txt  SELFLOOP_SYSTEM.md  SETUP_GUIDE.md  START_SCRIPTS.md  SYSTEM_PROMPT.md  SheratanDashboard.tsx  Sheratan_Laptop_Dev.code-workspace  TEST_GUIDE.md  WEBRELAY_ANALYSIS.md  Zip entpacken und analysieren.docx  backup_and_cleanup.py  cleanup_antigravity.bat  cleanup_clone_missions.py  create_backup.bat  docker-compose.yml  docs  index.html  lcp definition.md  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  selfloop-dashboard.html  setup_smb_share.ps1  (+18 more)
ENV/: .env  .env.dev  .env.prod  .env.staging
Sheratan_Laptop_Dev/: README.md  requirements.txt
backend/: Dockerfile  main.py  metrics_stream.py
docs/: README.md  index.html  openapi.yaml
hub_integration/: README.md  __init__.py  integration_example.py  llm_fallback.py  main_gui_modular.py  main_gui_phase4.py  ml_predictor.py  mt5_client.py
offgrid-net-v0.16.4-with-memory-PRO-UI-POLICY-ROTATE/: README-plugplay.md  README.md  README_memory_v0.17.0.md  pilot-auswertung.bat  pilot-starter-REAL.bat  pilot-starter.bat  pilot-stop.bat  pilot-upload.bat  pilot_assert.py  requirements.txt  start_pilot_real.bat
project/: REPORT.md  loop_controller.py  main.py  notizen.md  run_self_loop.py  (+3 more)
(+179 files in other folders)
