[project]
name = "sheratan-core"
version = "0.1.1"
description = "Sheratan Orchestrator Core"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "prometheus-client>=0.21.0",
  "typing-extensions>=4.10.0",
]
[tool.pytest.ini_options]
addopts = "-q"
